# gemini_file_search

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  KNOWN_ISSUES.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SEARCH_FEATURE.md  TROUBLESHOOTING.md  UPLOAD_FIX.md  debug_routes.py  docker-compose.yml  manual_test_commands.md  pyproject.toml  requirements.txt  start_app.sh  test_file_search.sh  test_models_api.sh  test_search.sh  test_upload.sh
app/: __init__.py  deps.py  main.py
app/models/: schemas.py
app/routers/: documents.py  media.py  search.py  stores.py
app/services/: file_search.py  retry.py
app/ui/static/css/: style.css
app/ui/static/js/: app.js
app/ui/templates/: index.html
samples/: README.md  sample1.txt  sample2.md  sample3.json
scripts/: check_health.sh  export_openapi.py  run_demo.sh
tests/: __init__.py  conftest.py
tests/e2e/: test_flow.py
tests/unit/: test_retry.py  test_schemas.py
